--- a/app/views/pages/front.slim
+++ b/app/views/pages/front.slim
@@ -12,12 +12,12 @@ section.frontpage-image-background#mallorca
 section#frontpage-info
   .ui.items
     .item
-      .ui.large.image
+      .ui.small.image
         img src="/assets/kds.png"
       .middle.aligned.content
         .header
           h1 CONFERENCE COMMANDER
-          p På denne siden har alle ansatte i Knowit mulighet til å melde seg på konferanser arrangert av Objectnet. Disse turene kan variere mellom Fredrikstad til Berlin.
+          p På denne siden har alle ansatte i Knowit mulighet til å melde seg på konferanser arrangert av Knowit Objectnet.
 
 section.frontpage-image-background#berlin
 section#frontpage-events
