--- a/app/views/events/_table.slim
+++ b/app/views/events/_table.slim
@@ -1,5 +1,5 @@
 - unless events.empty?
-  table.ui.very.basic.celled.table
+  table.ui.very.basic.large.celled.padded.table
     thead
       tr
         th = Event.human_attribute_name(:name)
