--- a/app/views/participations/edit.html.slim
+++ b/app/views/participations/edit.html.slim
@@ -1,5 +1,5 @@
 .ui.segment
-  .ui.list.horizontal
+  .ui.large.list.horizontal
     .item
       .header= Event.model_name.human
       = @participation.event.name
