--- a/app/views/users/_form.slim
+++ b/app/views/users/_form.slim
@@ -1,3 +1,3 @@
 = simple_form_for user, html: { class: 'ui large form' } do |f|
   = render 'fields', f: f
-  = f.button :submit
+  = f.button :submit, class: 'ui large primary button'
