--- a/app/views/pages/front.slim
+++ b/app/views/pages/front.slim
@@ -10,7 +10,7 @@ section#frontpage-info
   .ui.items
     .item
       .ui.small.image
-        img src="/assets/kds.png"
+        = image_tag 'kds.png'
       .middle.aligned.content
         .header
           h1 CONFERENCE COMMANDER
