--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -5,6 +5,14 @@ body {
   background-color: $knowit-complementary-gray-color-lightest-tint25;
 }
 
+a {
+  color: $knowit-complementary-blue-color-light;
+
+  &:hover {
+    color: $knowit-complementary-blue-color;
+  }
+}
+
 h1, h2, h3, h4, h5 {
   font-weight: 800;
   font-family: 'Raleway';
@@ -16,7 +24,8 @@ h2 {
 }
 
 .ui.segment {
-  background: $knowit-primary-green-color-lightest-tint50;
+  background: $knowit-primary-green-color-lightest;
+  border: 0px;
 }
 
 #top-menu.fixed + #frontpage-info {
