--- a/app/assets/stylesheets/overrides.scss
+++ b/app/assets/stylesheets/overrides.scss
@@ -4,6 +4,10 @@
   border-radius: 0px !important;
 }
 
+input, select {
+  border: 0px !important;
+}
+
 .ui.segment {
   box-shadow: none !important;
 }
