--- a/app/views/events/show.html.slim
+++ b/app/views/events/show.html.slim
@@ -1,46 +1,20 @@
 = render 'events/menu', event: @event
 
-div
-  table.ui.celled.table
-    thead
-      tr
-        th = Event.human_attribute_name(:name)
-        th = Event.human_attribute_name(:description)
-        th = Venue.model_name.human.pluralize
-        th = Event.human_attribute_name(:starting_at)
-        th = Event.human_attribute_name(:ending_at)
-        th = t('.registration')
-        - if can? :manage, Event
-          th = t('.actions')
-      tr
-        td = @event.name
-        td = @event.description
-        td = @event.hotels.size
-        td = @event.starting_at.strftime("%d/%m/%Y")
-        td = @event.ending_at.strftime("%d/%m/%Y")
-        td
-          - unless @event.user_already_signed_up? current_user
-            = link_to fa_icon('check-circle-o 2x'), new_event_participation_path(@event)
-        - if can? :manage, @event
-          td
-            div.ui.mini.buttons
-              = link_to "Edit", edit_event_path(@event), class: "ui button primary"
-              div.or
-              = link_to "Delete", event_path(@event), method: :delete, class: "ui button negative"
+.ui.segment
 
-  .ui.container.segment
-    h3 Reports
+.ui.segment
+  h3 Reports
 
-    = link_to "Allergies", event_allergies_path(@event)
+  = link_to "Allergies", event_allergies_path(@event), class: 'ui button secondary'
 
-  .ui.container.segment
-    h3 Participants
+.ui.segment
+  h3 Participants
 
-    - unless @event.participants.empty?
-      == render 'participations/table', participations: @event.participations
+  - unless @event.participants.empty?
+    == render 'participations/table', participations: @event.participations
 
-    - if can? :manage, @event
-      = link_to "Add participant", new_event_participation_path(@event), class: 'ui button green'
+  - if can? :manage, @event
+    = link_to "Add participant", new_event_participation_path(@event), class: 'ui button secondary'
 
-    - if can? :single_room_participants, Participation
-      = link_to "List deltakere med enkeltrom", single_room_participants_event_participations_path(@event), class: 'ui button green'
+  - if can? :single_room_participants, Participation
+    = link_to "List deltakere med enkeltrom", single_room_participants_event_participations_path(@event), class: 'ui button secondary'
