--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -6,13 +6,15 @@ html
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
     = javascript_pack_tag 'application'
-    = stylesheet_link_tag "https://fonts.googleapis.com/css?family=Sarpanch:400,500,600,700,800,900"
+    = stylesheet_link_tag "https://fonts.googleapis.com/css?family=Raleway"
 
   body
     - unless controller_name.to_sym == :sessions
       = render 'layouts/menu', fixed: true
 
-    = render 'layouts/alerts', flash: flash
     .ui.page.grid
-      .wide.column
-        = content_for?(:content) ? yield(:content) : yield
+      - unless flash.empty?
+        = render 'layouts/alerts', flash: flash
+      .row
+        .wide.column
+          = content_for?(:content) ? yield(:content) : yield
