Updates request_for_single_room -> request_for_sharing_room

--- a/app/views/participations/_fields.slim
+++ b/app/views/participations/_fields.slim
@@ -2,7 +2,7 @@
   .ui.checkbox
     = f.input :single_room
 
-= f.input :request_for_single_room, as: :string
+= f.input :request_for_sharing_room, as: :string
 
 .ui.divider
 
