--- a/app/views/participations/_table.slim
+++ b/app/views/participations/_table.slim
@@ -1,4 +1,4 @@
-table.ui.celled.table
+table.ui.very.basic.table
   thead
     tr
       th = User.human_attribute_name(:name)
@@ -12,11 +12,11 @@ table.ui.celled.table
       tr
         td = participation.user.full_name
         td = participation.event.name
-        td = participation.single_room
+        td = yesno_icon(participation.single_room)
         td = participation.request_for_sharing_room
         td
           - if can? :manage, participation
             div.ui.mini.buttons
-              = link_to 'Edit', edit_event_participation_path(@event, participation), class: "ui button"
+              = link_to 'Edit', edit_event_participation_path(@event, participation), class: "ui primary button"
               div.or
               = link_to 'Delete', event_participation_path(@event, participation), data: { confirm: 'Are you sure?' }, method: :delete, class: "ui button negative"
