Sets multiple select for activities

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -1,7 +1,7 @@
 @import "variables";
 @import "mixins";
 
-body {
+html, body {
   background-color: $knowit-complementary-gray-color-lightest-tint25;
 }
 
