--- a/app/views/participations/_fields.slim
+++ b/app/views/participations/_fields.slim
@@ -23,4 +23,4 @@
 
 .ui.divider
 
-= f.input :activity_ids, as: :select, collection: participation.event.activities.all, input_html: { class: 'ui dropdown selection' }
+= f.input :activity_ids, as: :select, collection: participation.event.activities.all, input_html: { class: 'ui fluid dropdown', multiple: '' }
