--- a/app/views/participations/_table.slim
+++ b/app/views/participations/_table.slim
@@ -2,18 +2,22 @@ table.ui.very.basic.table
   thead
     tr
       th = User.human_attribute_name(:name)
-      th = Participation.human_attribute_name(:name)
       th = Participation.human_attribute_name(:single_room)
       th = Participation.human_attribute_name(:request_for_sharing_room)
+      th = Participation.human_attribute_name(:extended_stay)
+      th = Participation.human_attribute_name(:extended_stay_from)
+      th = Participation.human_attribute_name(:extended_stay_to)
       th = t('.actions')
 
   tbody
     - participations.each do |participation|
       tr
-        td = participation.user.full_name
-        td = participation.event.name
-        td = yesno_icon(participation.single_room)
-        td = participation.request_for_sharing_room
+        td = maybe participation.user.full_name
+        td = yesno_icon participation.single_room
+        td = maybe participation.request_for_sharing_room
+        td = yesno_icon participation.extended_stay
+        td = maybe participation.extended_stay_from
+        td = maybe participation.extended_stay_to
         td
           - if can? :manage, participation
             div.ui.mini.buttons
