--- a/app/views/events/_menu.slim
+++ b/app/views/events/_menu.slim
@@ -4,7 +4,7 @@
       = link_to Accommodation.model_name.human(count: 2), event_accommodations_path(event), class: 'item'
     - if can? :read, EventSession
       = link_to EventSession.model_name.human(count: 2), event_event_sessions_path(event), class: 'item'
-    - if can? :read, Schedule
-      = link_to Schedule.model_name.human(count: 2), event_schedules_path(event), class: 'item'
+    - if can? :read, Event
+      / = link_to Schedule.model_name.human(count: 2), event_schedules_path(event), class: 'item' - change this to new event schedule path.
     - if can? :read, Hotel
       = link_to Hotel.model_name.human(count: 2), event_hotels_path(event), class: 'item'
