--- a/app/views/events/show.html.slim
+++ b/app/views/events/show.html.slim
@@ -1,6 +1,9 @@
 = render 'events/menu', event: @event
 
+- breadcrumb :event, @event
+
 .ui.segment
+  = @event.description
 
 .ui.segment
   h3 Reports
