--- a/app/views/events/_table.slim
+++ b/app/views/events/_table.slim
@@ -13,7 +13,7 @@
     tbody
       - events.each do |event|
         tr
-          td = event.name
+          td = link_to event.name, event_path(event)
           td = event.description
           td = event.starting_at.strftime("%d/%m/%Y")
           td = event.ending_at.strftime("%d/%m/%Y")
