Add event cards to events index.

--- a/app/views/events/index.html.slim
+++ b/app/views/events/index.html.slim
@@ -1,4 +1,7 @@
 - breadcrumb :events
 
-.ui.segment
-  = render 'table', events: @events
+/ .ui.segment
+/   = render 'table', events: @events
+
+.events
+  = render 'card', events: @events
