--- a/app/views/shared/_crud_title.slim
+++ b/app/views/shared/_crud_title.slim
@@ -4,7 +4,7 @@ h1
   - when :index
     = t("helpers.actions.#{action_name.downcase}", model: model_name.human(count: 2).downcase)
   - when :show
-    = t("helpers.actions.#{action_name.downcase}", model: model_name, record: crudable.to_s)
+    = t("helpers.actions.#{action_name.downcase}", model: model_name.human(count: 1), record: crudable.to_s)
   - else
     = t("helpers.actions.#{action_name.downcase}", model: model_name.human.downcase)
 
