--- a/app/views/events/_card.html.slim
+++ b/app/views/events/_card.html.slim
@@ -5,47 +5,46 @@
         .content
           .center
             = link_to event_path(event),
-              class: "ui inverted button" do 
+              class: "ui inverted button" do
               = t('events.show')
+            - if can? :edit, event
+              = link_to edit_event_path(event), class: 'ui inverted button' do
+                i.icon.pencil
+                = t('shared.action_links.edit')
       img class="image" src="#{event.images.empty? ? '' : event.image_url}"
     .content
       .header
         = event.name
       .meta
-        span class="date" 
-          = event.starting_at.strftime("%d/%m/%Y")
-          | &nbsp;-&nbsp;
-          = event.ending_at.strftime("%d/%m/%Y")
+        span class="date"
+          => event.starting_at.strftime("%d. %b %Y")
+          | &mdash;
+          =< event.ending_at.strftime("%d. %b %Y")
       .description
         = event.description
     .extra.content
-      span 
-        = fa_icon('users icon')
-        | &nbsp; 
+      span
+        i.users.icon>
         | #{event.participants.count} #{t('events.participants')}
       span class="right floated"
-        = fa_icon('commenting icon')
-        | &nbsp; 
+        i.commenting.icon>
         | #{event.event_sessions.count} #{t('events.talks')}
-    .ui.two.buttons.bottom.attached 
+    .ui.two.buttons.bottom.attached
       - unless event.user_already_signed_up? current_user
         = link_to new_event_participation_path(event),
           class: "ui medium button knowit-purple" do
-          = fa_icon('plus icon')
-          | &nbsp; 
-          = t('participations.new')
+          i.icon.plus
+          =< t('participations.new')
       - else
-        = link_to edit_event_participation_path(event, 
-          id: event.user_participation(current_user)), 
+        = link_to edit_event_participation_path(event,
+          id: event.user_participation(current_user)),
           class: "ui medium button knowit-purple" do
-          = fa_icon('pencil icon')
-          | &nbsp;
-          = t('participations.edit')   
+          i.icon.pencil
+          =< t('participations.edit')
       = link_to new_event_event_session_path(event), class: "ui medium button knowit-green" do
-        = fa_icon('paper-plane icon')
-        | &nbsp; 
-        = t('event_sessions.new')
-        
+        i.icon.send
+        =< t('event_sessions.new')
+
 javascript:
   $('.events .card .image').dimmer({
     on: 'hover'
