--- a/app/views/shared/_crud_title.slim
+++ b/app/views/shared/_crud_title.slim
@@ -1,8 +1,8 @@
-h1
+h1.title
   - model_name = controller_name.classify.constantize.model_name
   - case action_name.to_sym
   - when :index
-    = t("helpers.actions.#{action_name.downcase}", model: model_name.human(count: 2).downcase)
+    = t("helpers.actions.#{action_name.downcase}", model: model_name.human(count: 2))
   - when :show
     = t("helpers.actions.#{action_name.downcase}", model: model_name.human(count: 1), record: crudable.to_s)
   - else
