--- a/app/views/participations/_table.slim
+++ b/app/views/participations/_table.slim
@@ -2,11 +2,13 @@ table.ui.very.basic.table
   thead
     tr
       th = User.human_attribute_name(:name)
-      th = Participation.human_attribute_name(:single_room)
-      th = Participation.human_attribute_name(:request_for_sharing_room)
+      - if current_user.admin?
+        th = Participation.human_attribute_name(:single_room)
+        th = Participation.human_attribute_name(:request_for_sharing_room)
       th = Participation.human_attribute_name(:extended_stay)
       th = Participation.human_attribute_name(:extended_stay_from)
       th = Participation.human_attribute_name(:extended_stay_to)
+      th = Activity.model_name.human(count: 2)
       th = t('.actions')
 
   tbody
@@ -14,10 +16,15 @@ table.ui.very.basic.table
       tr
         td = maybe participation.user.full_name
         td = yesno_icon participation.single_room
-        td = maybe participation.request_for_sharing_room
-        td = yesno_icon participation.extended_stay
+        - if current_user.admin?
+          td = maybe participation.request_for_sharing_room
+          td = yesno_icon participation.extended_stay
         td = maybe participation.extended_stay_from
         td = maybe participation.extended_stay_to
+        td
+          - participation.activities.each do |activity|
+            div = activity.title
+
         td
           - if can? :manage, participation
             div.ui.mini.buttons
