--- a/app/views/layouts/_menu.slim
+++ b/app/views/layouts/_menu.slim
@@ -1,15 +1,18 @@
-.ui.secondary.pointing.huge.menu#top-menu.fixed
-  = link_to t('menu.frontpage'), root_path, class: 'item'
-  - if can? :read, Event
-    = link_to Event.model_name.human(count: 2), events_path, class: 'item'
-  - if can? :manage, User
-    = link_to User.model_name.human(count: 2), users_path, class: 'item'
+- submenu = content_for?(:auxiliary_menu) ? "submenu" : ""
 
-  .right.menu
-  - if current_user
-    = link_to t('menu.edit_profile'), edit_user_path(current_user), class: 'item'
-    = link_to t('menu.sign_out'), signout_path, method: :delete, class: 'item'
+#top-menu.ui.menu.fixed(class=submenu)
+  .ui.secondary.pointing.huge.menu
+    = link_to t('menu.frontpage'), root_path, class: 'item'
+    - if can? :read, Event
+      = link_to Event.model_name.human(count: 2), events_path, class: 'item'
+    - if can? :manage, User
+      = link_to User.model_name.human(count: 2), users_path, class: 'item'
 
-- if content_for? :auxiliary_menu
-  .ui.secondary.pointing.menu#auxiliary-menu
-    = yield :auxiliary_menu
+    .right.menu
+    - if current_user
+      = link_to t('menu.edit_profile'), edit_user_path(current_user), class: 'item'
+      = link_to t('menu.sign_out'), signout_path, method: :delete, class: 'item'
+
+  - if content_for? :auxiliary_menu
+    .ui.secondary.pointing.menu#auxiliary-menu
+      = yield :auxiliary_menu
