Adds some breadcrumbs

--- a/app/views/activities/edit.html.slim
+++ b/app/views/activities/edit.html.slim
@@ -1,3 +1,5 @@
 = render 'events/menu', event: @parent
+- breadcrumb :event_activities, @activity, @parent
 
-= render "form"
+.ui.segment
+  = render "form"
