--- a/app/views/events/_menu.slim
+++ b/app/views/events/_menu.slim
@@ -10,3 +10,5 @@
       = link_to Hotel.model_name.human(count: 2), event_hotels_path(event), class: 'item'
     - if can? :read, Activity
       = link_to Activity.model_name.human(count: 2), event_activities_path(event), class: 'item'
+    - if can? :read, Track
+      = link_to Track.model_name.human(count: 2), event_tracks_path(event), class: 'item'
