--- a/app/assets/stylesheets/frontpage.scss
+++ b/app/assets/stylesheets/frontpage.scss
@@ -1,6 +1,7 @@
 // Place all the styles related to the frontpage controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+@import "variables";
 
 html, body {
   height: 100%;
@@ -14,7 +15,6 @@ html, body {
     font-family: 'Raleway', sans-serif;
     font-weight: 300;
     font-size: 25px;
-
   }
 
   /* Layout */
@@ -24,37 +24,64 @@ html, body {
     position: relative;
   	padding-bottom: 6em;
   }
-  .frontpage-image-background {
+  .intro-flex {
+    display: flex;
+    height: 70%;
+    align-items: center;
+    justify-content: space-around;
+  }
+  #frontpage-top {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.01), rgba(0, 0, 0, 0.6)), url('/assets/mallorca.jpg');
+    height: 100%;
+    margin-top: 76px;
     h1 {
       font-family: 'Brushup';
       color: white;
       font-size: 8.125rem;
+      padding: 4rem 0;
     }
-    min-height: 256px;
-    background-attachment: fixed;
-    background-position: top center;
-    background-size: cover !important;
-    background-repeat: no-repeat;
+    .intro-next-event {
+      color: white;
+      border: 2px solid white;
+      padding: 2rem 1rem;
+      text-align: center;
+
+      .button {
+        margin-top: 1rem;
+      }
+    }
+    .intro-knowit-logo {
+      width: 100%;
+      margin-top: 2rem;
+      text-align: center;
+    }
   }
-  #lofoten {
-    display: flex;
-    justify-content: center;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.01), rgba(0, 0, 0, 0.6)), url(asset-path('lofoten.jpg'));
+  .divider-container {
+    width: 100%;
+    text-align: center;
+    padding: 3rem 0;
+    background-color: white;
   }
+  .divider-container .green-divider {
+    width: 20%;
+    margin: 0 auto;
+    border-bottom: 6px solid $knowit-primary-green-color-light;
+  }
+  #frontpage-info {
+    padding-top: 8rem;
+    padding-bottom: 8rem;
+  }
+
+  #frontpage-events {
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+  }
+
   .intro-elements {
-    position: relative;
-    top: 30%;
     img {
       margin-bottom: 1em;
       display: block;
     }
-  }
-  #berlin {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.01), rgba(0, 0, 0, 0.6)), url(asset-path('berlin.jpg'));
-  }
-  #mallorca {
-    background-image: linear-gradient(rgba(255, 255, 255, 0.01), rgba(255, 255, 255, 0.01)), url(asset-path('mallorca.jpg'));
-    height: 80%;
   }
   .intro .wrapper {
     text-align: center;
@@ -95,114 +122,20 @@ html, body {
     -webkit-transform: translateX(-50%) rotate(45deg);
     transform: translateX(-50%) rotate(45deg);
   }
-
-  @media (min-width: 760px) {
-    dt {
-      text-align: right;
-      padding-right: 15px;
-      float: left;
-      width: 165px;
-      font-weight: bold;
-    }
-
-    dd {
-      margin-left: 165px;
-      margin-bottom: 10px;
-    }
-
-
-    .intro .content h1 {
-      margin: 0;
-    }
-    .location .content {
-      width: 350px;
-      height: 200px;
-      padding: 20px;
-      top: 10px;
-      left: 10px;
-      position: absolute;
-      text-align: left;
-      background: white;
-    }
-
-    .location iframe {
-      margin-top: 0;
-    }
-
-    .two, .schedule, .talks {
-      padding: 100px 0;
-    }
-
-    .two .center {
-      min-width: 400px;
-      margin: auto;
-      margin-top: -25px;
-    }
-
-    .content h1 {
-      line-height: 1.3;
-    }
-
-    .two .content, .schedule .content, .talks .content {
-      margin: 0 auto;
-      width: 700px;
-    }
-
-    .schedule .content {
-        overflow: hidden;
-    }
-
-    .schedule.progComView .content {
-      width: 90%;
-    }
-
-    .schedule-entry {
-      float: left;
-    }
-    .with-4-entries .schedule-entry {
-      width: 23.5%;
-      margin-right: 2%;
-    }
-
-    .with-3-entries .schedule-entry {
-      width: 32%;
-      margin-right: 2%;
-    }
-
-    .with-2-entries .schedule-entry {
-      width: 49%;
-      margin-right: 2%;
-    }
-    .with-1-entries .schedule-entry {
-      width: 100%;
-      margin-right: 0;
-    }
-
-    .schedule-entry:last-child {
-      margin-right: 0;
-    }
-
-    .speaker {
-      margin-bottom: 20px;
-      overflow: auto;
-    }
-
-    .speaker .bio-pic {
-      float: left;
-    }
-
-    .speaker .bio {
-      margin-left: 170px;
-    }
+}
+@media (max-width: 760px) {
+  #frontpage-top {
+    height: 70%;
   }
-
-  .speaker .bio-pic {
-    border-radius: 50%;
-    width: 150px;
-    background-color: #efefef;
+  .intro-flex {
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
+  .intro-next-event {
+    margin-top: 2rem;
   }
 }
-
 #top-menu.fixed + .grid {
   margin-top: 35px;
 }
